--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,7 +1,8 @@
     /*-navbarAdmin style */
 
     @import url('https://fonts.googleapis.com/css?family=Noto+Sans|Squada+One|Open+Sans|Baloo+Da+2:wght@700|Roboto:100,300,400,500,700,900&display=swap');
-
+	@import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400..800&display=swap');
+	@import url('https://fonts.maateen.me/solaiman-lipi/font.css');
 
 	body {
 	   font-family: 'Roboto', sans-serif;
@@ -12,7 +13,7 @@
 	    font-family: 'Baloo Da 2', cursive;
 	    font-weight: 700;
 	} @media only screen and (max-width: 600px) {
-	    .banglafont { }
+	    
 	}
 
 
